[package]
name = "resorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
inquire = "0.6.2"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
skillratings = "0.26.0"
